--- a/resources/views/admin/layout.html
+++ b/resources/views/admin/layout.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         {{#block "title" }}
-        <title>Admin Users</title>
+        <title>Admin</title>
         {{/block }}
 
         <link href="/assets/default/favicon.ico" rel="shortcut icon">
