Fix file upload

--- a/resources/views/admin/index.html
+++ b/resources/views/admin/index.html
@@ -1,3 +1,12 @@
+{{#partial "styles" }}
+<style type="text/css">
+    .thumbnail {
+        max-height: 60px;
+        max-width: 60px;
+    }
+</style>
+{{/partial }}
+
 {{#partial "content" }}
 <div class="content-wrapper">
     
