--- a/resources/views/admin/layout.html
+++ b/resources/views/admin/layout.html
@@ -11,6 +11,9 @@
 
         <link href="/assets/default/favicon.ico" rel="shortcut icon">
         <link href="/assets/admin/css/main.css" rel="stylesheet" type="text/css" />
+        
+        {{#block "styles" }}
+        {{/block }}
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries-->
         <!--if lt IE 9
