--- a/resources/views/admin/articles/form.html
+++ b/resources/views/admin/articles/form.html
@@ -7,7 +7,8 @@
         <div>
             <ul class="breadcrumb">
                 <li><i class="fa fa-home fa-lg"></i></li>
-                <li><a href="/admin/articles">articles</a></li>
+                <li><a href="" 
+                       v-on:click.prevent="setMenu('articles_index')">articles</a></li>
             </ul>
         </div>
     </div>
@@ -48,7 +49,8 @@
                             v-bind:disabled="processing"
                             class="btn btn-primary btn-sm">Save
                     </button>
-                    <a class="btn btn-warning btn-sm" href="/admin/articles">Back</a>
+                    <a class="btn btn-warning btn-sm" href="" 
+                       v-on:click.prevent="setMenu('articles_index')">Back</a>
                 </form>
             </div>
         </div>
