--- a/resources/views/layout.html
+++ b/resources/views/layout.html
@@ -37,6 +37,11 @@
         </div>
         {{/block }}
         
+        <!-- Javascripts-->
+        <script src="/assets/admin/js/jquery-2.1.4.min.js"></script>
+        <script src="/assets/default/js/vue.js"></script>
+        <script src="/assets/default/js/vue-resource.js"></script>
+        
         {{#block "scripts" }}
         {{/block }}
     </body>
