--- a/resources/views/admin/index.html
+++ b/resources/views/admin/index.html
@@ -1,8 +1,11 @@
 {{#partial "styles" }}
 <style type="text/css">
+    .table-striped tr:first-child th:last-child {
+        width: 90px;
+    }
     .thumbnail {
-        max-height: 60px;
-        max-width: 60px;
+        max-height: 260px;
+        max-width: 100%;
     }
 </style>
 {{/partial }}
