--- a/resources/views/admin/layout.html
+++ b/resources/views/admin/layout.html
@@ -61,16 +61,16 @@
                     <div class="user-panel">
                         <div class="pull-left image">
 
-                            {{#if logged }}
-                            <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
+                            {{#if logged.image }}
+                            <img class="img-circle" src="/avatar/{{ logged.id }}/{{ logged.image }}" alt="User Image">
                             {{ else }}
                             <img class="img-circle" src="/assets/admin/images/user.png" alt="User Image">
                             {{/if }}
 
                         </div>
                         <div class="pull-left info">
-                            <p>John Doe</p>
-                            <p class="designation">Frontend Developer</p>
+                            <p>{{ logged.username }}</p>
+                            <p class="designation">{{ logged.email }}</p>
                         </div>
                     </div>
 
