--- a/resources/views/admin/articles/index.html
+++ b/resources/views/admin/articles/index.html
@@ -21,34 +21,10 @@
                    v-bind:disabled="processing"
                    v-on:click.prevent="formNew"
                    class="btn btn-primary btm-sm pull-right">New</a>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Title</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="item in articles">
-                            <td v-text="item.id"></td>
-                            <td v-text="item.title"></td>
-                            <td>
-                                <a class="btn btn-warning btn-sm"
-                                   v-bind:disabled="processing"
-                                   v-on:click.prevent="edit(item)">
-                                       <i class="fa fa-pencil"></i>
-                                </a>
-                                &nbsp;
-                                <a class="btn btn-danger btn-sm"
-                                   v-bind:disabled="processing"
-                                   v-on:click.prevent="del(item)">
-                                       <i class="fa fa-trash"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="clearfix"></div>
+                
+                <table class="table table-striped"></table>
+                
             </div>
         </div>
     </div>
