--- a/resources/views/admin/users/index.html
+++ b/resources/views/admin/users/index.html
@@ -21,37 +21,9 @@
                    v-bind:disabled="processing"
                    v-on:click.prevent="formNew"
                    class="btn btn-primary btm-sm pull-right">New</a>
+                   <div class="clearfix"></div>
 
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th class="hidden-xs">Username</th>
-                            <th>Email</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="item in users">
-                            <td v-text="item.id"></td>
-                            <td v-text="item.username" class="hidden-xs"></td>
-                            <td v-text="item.email"></td>
-                            <td>
-                                <a class="btn btn-warning btn-sm"
-                                   v-bind:disabled="processing"
-                                   v-on:click.prevent="edit(item)">
-                                    <i class="fa fa-pencil"></i>
-                                </a>
-                                &nbsp;
-                                <a class="btn btn-danger btn-sm"
-                                   v-bind:disabled="processing"
-                                   v-on:click.prevent="del(item)">
-                                    <i class="fa fa-trash"></i>   
-                                </a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <table class="table table-striped"></table>
 
             </div>
         </div>
